@@ -1,3 +1,4 @@
+.\" RCSid $Id: normtiff.1,v 1.6 2011/06/23 18:05:18 greg Exp $
 .TH NORMTIFF 1 2/25/99 RADIANCE
 .SH NAME
 normtiff - tone-map and convert RADIANCE picture or HDR TIFF to standard TIFF
