@@ -1791,3 +1791,7 @@ Added BRDF calculations to genBSDF.
 Bug fixes in rsensor thanks to help from David Geisler-Moroder.
 
 Added variable-resolution BSDF support in renderers and genBSDF.
+
+Created pkgBSDF program to extract BSDF geometry and put it
+together with surface description suitable for inclusion in
+a Radiance scene.
